@@ -1155,7 +1155,7 @@ TclpNativeJoinPath(prefix, joining)
 
 	    if (length > 0 && (start[length-1] != '/')) {
 		Tcl_AppendToObj(prefix, "/", 1);
-		length++;
+		Tcl_GetStringFromObj(prefix, &length);
 	    }
 	    needsSep = 0;
 	    
@@ -1194,7 +1194,7 @@ TclpNativeJoinPath(prefix, joining)
 	    if ((length > 0) && 
 		(start[length-1] != '/') && (start[length-1] != ':')) {
 		Tcl_AppendToObj(prefix, "/", 1);
-		length++;
+		Tcl_GetStringFromObj(prefix, &length);
 	    }
 	    needsSep = 0;
 	    
